parser_py/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ARROBA
    CALL
    COMILLAS
    COND_NUMERICA
    DATATYPE
    DER_EXCLAMACION
    DER_INTERROGACION
    DIVISION
    ELSE
    ENYE
    GUION
    ID
    IGUALDAD
    IZQ_EXCLAMACION
    IZQ_INTERROGACION
    LETRA
    MAYUSCULA
    MULTIPLICACION
    PUNTO
    RESTA
    SUMA
    TILDE
    UNDERSCORE

Grammar

Rule 0     S' -> program
Rule 1     program -> lista_comentarios code_block
Rule 2     lista_comentarios -> comentario lista_comentarios
Rule 3     lista_comentarios -> empty
Rule 4     comentario -> COMENTARIO
Rule 5     code_block -> proc MASTER LPARENTESIS comentario list_statement RPARENTESIS PUNTO_COMA group_proc
Rule 6     code_block -> group_proc proc MASTER LPARENTESIS comentario list_statement RPARENTESIS PUNTO_COMA group_proc
Rule 7     proc -> PROC
Rule 8     group_proc -> PROC VARIABLE LPARENTESIS COMENTARIO list_statement RPARENTESIS PUNTO_COMA group_proc
Rule 9     group_proc -> empty
Rule 10    list_statement -> statement list_statement
Rule 11    list_statement -> comentario
Rule 12    list_statement -> empty
Rule 13    statement -> no_return_statement
Rule 14    statement -> return_statement
Rule 15    no_return_statement -> new_variable_statement
Rule 16    no_return_statement -> alterb_statement
Rule 17    no_return_statement -> values_statement
Rule 18    no_return_statement -> repeat_statement
Rule 19    no_return_statement -> until_statement
Rule 20    no_return_statement -> while_statement
Rule 21    no_return_statement -> case_statement
Rule 22    no_return_statement -> printvalues_statement
Rule 23    no_return_statement -> signal_statement
Rule 24    return_statement -> return_num_statement
Rule 25    return_statement -> return_bool_statement
Rule 26    return_num_statement -> viewsignal_statement
Rule 27    return_num_statement -> alter_statement
Rule 28    num_alter_statement -> NUMERO
Rule 29    return_bool_statement -> condition_statement
Rule 30    return_bool_statement -> istrue_statement
Rule 31    new_variable_statement -> NEW VARIABLE COMA LPARENTESIS datatype COMA value RPARENTESIS PUNTO_COMA
Rule 32    values_statement -> VALUES LPARENTESIS VARIABLE COMA value RPARENTESIS PUNTO_COMA
Rule 33    alter_statement -> ALTER LPARENTESIS VARIABLE COMA operador COMA num_alter_statement RPARENTESIS PUNTO_COMA
Rule 34    alter_statement -> ALTER LPARENTESIS VARIABLE COMA operador COMA expression RPARENTESIS PUNTO_COMA
Rule 35    operador -> ADD
Rule 36    operador -> SUB
Rule 37    operador -> MUL
Rule 38    operador -> DIV
Rule 39    alterb_statement -> ALTERB LPARENTESIS VARIABLE RPARENTESIS PUNTO_COMA
Rule 40    condition_statement -> expression condition expression
Rule 41    istrue_statement -> ISTRUE LPARENTESIS VARIABLE RPARENTESIS PUNTO_COMA
Rule 42    repeat_statement -> REPEAT LPARENTESIS list_statement break_statement RPARENTESIS PUNTO_COMA
Rule 43    break_statement -> BREAK PUNTO_COMA
Rule 44    until_statement -> UNTIL LPARENTESIS list_statement RPARENTESIS condition_statement PUNTO_COMA
Rule 45    condition -> MAYOR_QUE
Rule 46    condition -> MENOR_QUE
Rule 47    condition -> IGUAL
Rule 48    condition -> DISTINTO_QUE
Rule 49    condition -> MAYOR_IGUAL_QUE
Rule 50    condition -> MENOR_IGUAL_QUE
Rule 51    while_statement -> WHILE condition_statement LPARENTESIS list_statement RPARENTESIS PUNTO_COMA
Rule 52    while_statement -> WHILE istrue LPARENTESIS list_statement RPARENTESIS PUNTO_COMA
Rule 53    bool -> TRUE
Rule 54    bool -> FALSE
Rule 55    case_statement -> CASE VARIABLE case_when_statements else_statement PUNTO_COMA
Rule 56    case_when_statements -> case_when_statement case_when_statements
Rule 57    case_when_statements -> empty
Rule 58    case_when_statement -> WHEN value THEN list_statement
Rule 59    else_statement -> list_statement
Rule 60    else_statement -> empty
Rule 61    printvalues_statement -> PRINTVALUES LPARENTESIS list_content_print RPARENTESIS PUNTO_COMA
Rule 62    list_content_print -> content_print COMA list_content_print
Rule 63    list_content_print -> content_print
Rule 64    content_print -> STRING
Rule 65    content_print -> VARIABLE
Rule 66    content_print -> value
Rule 67    signal_statement -> SIGNAL LPARENTESIS VARIABLE COMA return_num_statement RPARENTESIS PUNTO_COMA
Rule 68    signal_statement -> SIGNAL LPARENTESIS VARIABLE COMA expression RPARENTESIS PUNTO_COMA
Rule 69    viewsignal_statement -> VIEWSIGNAL LPARENTESIS VARIABLE RPARENTESIS PUNTO_COMA
Rule 70    viewsignal_statement -> VIEWSIGNAL LPARENTESIS expression RPARENTESIS PUNTO_COMA
Rule 71    viewsignal_statement -> VIEWSIGNAL LPARENTESIS alter_statement RPARENTESIS PUNTO_COMA
Rule 72    expression -> NUMERO
Rule 73    expression -> VARIABLE
Rule 74    expression -> LPARENTESIS expression RPARENTESIS
Rule 75    expression -> NUMERO operador NUMERO
Rule 76    istrue -> ISTRUE LPARENTESIS VARIABLE RPARENTESIS
Rule 77    value -> expression
Rule 78    value -> bool
Rule 79    value -> return_num_statement
Rule 80    value -> return_bool_statement
Rule 81    value -> BOOLEAN
Rule 82    datatype -> NUMERO
Rule 83    datatype -> BOOL
Rule 84    empty -> <empty>

Terminals, with rules where they appear

ADD                  : 35
ALTER                : 33 34
ALTERB               : 39
ARROBA               : 
BOOL                 : 83
BOOLEAN              : 81
BREAK                : 43
CALL                 : 
CASE                 : 55
COMA                 : 31 31 32 33 33 34 34 62 67 68
COMENTARIO           : 4 8
COMILLAS             : 
COND_NUMERICA        : 
DATATYPE             : 
DER_EXCLAMACION      : 
DER_INTERROGACION    : 
DISTINTO_QUE         : 48
DIV                  : 38
DIVISION             : 
ELSE                 : 
ENYE                 : 
FALSE                : 54
GUION                : 
ID                   : 
IGUAL                : 47
IGUALDAD             : 
ISTRUE               : 41 76
IZQ_EXCLAMACION      : 
IZQ_INTERROGACION    : 
LETRA                : 
LPARENTESIS          : 5 6 8 31 32 33 34 39 41 42 44 51 52 61 67 68 69 70 71 74 76
MASTER               : 5 6
MAYOR_IGUAL_QUE      : 49
MAYOR_QUE            : 45
MAYUSCULA            : 
MENOR_IGUAL_QUE      : 50
MENOR_QUE            : 46
MUL                  : 37
MULTIPLICACION       : 
NEW                  : 31
NUMERO               : 28 72 75 75 82
PRINTVALUES          : 61
PROC                 : 7 8
PUNTO                : 
PUNTO_COMA           : 5 6 8 31 32 33 34 39 41 42 43 44 51 52 55 61 67 68 69 70 71
REPEAT               : 42
RESTA                : 
RPARENTESIS          : 5 6 8 31 32 33 34 39 41 42 44 51 52 61 67 68 69 70 71 74 76
SIGNAL               : 67 68
STRING               : 64
SUB                  : 36
SUMA                 : 
THEN                 : 58
TILDE                : 
TRUE                 : 53
UNDERSCORE           : 
UNTIL                : 44
VALUES               : 32
VARIABLE             : 8 31 32 33 34 39 41 55 65 67 68 69 73 76
VIEWSIGNAL           : 69 70 71
WHEN                 : 58
WHILE                : 51 52
error                : 

Nonterminals, with rules where they appear

alter_statement      : 27 71
alterb_statement     : 16
bool                 : 78
break_statement      : 42
case_statement       : 21
case_when_statement  : 56
case_when_statements : 55 56
code_block           : 1
comentario           : 2 5 6 11
condition            : 40
condition_statement  : 29 44 51
content_print        : 62 63
datatype             : 31
else_statement       : 55
empty                : 3 9 12 57 60
expression           : 34 40 40 68 70 74 77
group_proc           : 5 6 6 8
istrue               : 52
istrue_statement     : 30
list_content_print   : 61 62
list_statement       : 5 6 8 10 42 44 51 52 58 59
lista_comentarios    : 1 2
new_variable_statement : 15
no_return_statement  : 13
num_alter_statement  : 33
operador             : 33 34 75
printvalues_statement : 22
proc                 : 5 6
program              : 0
repeat_statement     : 18
return_bool_statement : 25 80
return_num_statement : 24 67 79
return_statement     : 14
signal_statement     : 23
statement            : 10
until_statement      : 19
value                : 31 32 58 66
values_statement     : 17
viewsignal_statement : 26
while_statement      : 20

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . lista_comentarios code_block
    (2) lista_comentarios -> . comentario lista_comentarios
    (3) lista_comentarios -> . empty
    (4) comentario -> . COMENTARIO
    (84) empty -> .

    COMENTARIO      shift and go to state 5
    PROC            reduce using rule 84 (empty -> .)

    program                        shift and go to state 1
    lista_comentarios              shift and go to state 2
    comentario                     shift and go to state 3
    empty                          shift and go to state 4

state 1

    (0) S' -> program .



state 2

    (1) program -> lista_comentarios . code_block
    (5) code_block -> . proc MASTER LPARENTESIS comentario list_statement RPARENTESIS PUNTO_COMA group_proc
    (6) code_block -> . group_proc proc MASTER LPARENTESIS comentario list_statement RPARENTESIS PUNTO_COMA group_proc
    (7) proc -> . PROC
    (8) group_proc -> . PROC VARIABLE LPARENTESIS COMENTARIO list_statement RPARENTESIS PUNTO_COMA group_proc
    (9) group_proc -> . empty
    (84) empty -> .

  ! shift/reduce conflict for PROC resolved as shift
    PROC            shift and go to state 9

  ! PROC            [ reduce using rule 84 (empty -> .) ]

    code_block                     shift and go to state 6
    proc                           shift and go to state 7
    group_proc                     shift and go to state 8
    empty                          shift and go to state 10

state 3

    (2) lista_comentarios -> comentario . lista_comentarios
    (2) lista_comentarios -> . comentario lista_comentarios
    (3) lista_comentarios -> . empty
    (4) comentario -> . COMENTARIO
    (84) empty -> .

    COMENTARIO      shift and go to state 5
    PROC            reduce using rule 84 (empty -> .)

    comentario                     shift and go to state 3
    lista_comentarios              shift and go to state 11
    empty                          shift and go to state 4

state 4

    (3) lista_comentarios -> empty .

    PROC            reduce using rule 3 (lista_comentarios -> empty .)


state 5

    (4) comentario -> COMENTARIO .

    COMENTARIO      reduce using rule 4 (comentario -> COMENTARIO .)
    PROC            reduce using rule 4 (comentario -> COMENTARIO .)
    NEW             reduce using rule 4 (comentario -> COMENTARIO .)
    ALTERB          reduce using rule 4 (comentario -> COMENTARIO .)
    VALUES          reduce using rule 4 (comentario -> COMENTARIO .)
    REPEAT          reduce using rule 4 (comentario -> COMENTARIO .)
    UNTIL           reduce using rule 4 (comentario -> COMENTARIO .)
    WHILE           reduce using rule 4 (comentario -> COMENTARIO .)
    CASE            reduce using rule 4 (comentario -> COMENTARIO .)
    PRINTVALUES     reduce using rule 4 (comentario -> COMENTARIO .)
    SIGNAL          reduce using rule 4 (comentario -> COMENTARIO .)
    VIEWSIGNAL      reduce using rule 4 (comentario -> COMENTARIO .)
    ALTER           reduce using rule 4 (comentario -> COMENTARIO .)
    ISTRUE          reduce using rule 4 (comentario -> COMENTARIO .)
    NUMERO          reduce using rule 4 (comentario -> COMENTARIO .)
    VARIABLE        reduce using rule 4 (comentario -> COMENTARIO .)
    LPARENTESIS     reduce using rule 4 (comentario -> COMENTARIO .)
    RPARENTESIS     reduce using rule 4 (comentario -> COMENTARIO .)
    BREAK           reduce using rule 4 (comentario -> COMENTARIO .)
    PUNTO_COMA      reduce using rule 4 (comentario -> COMENTARIO .)
    WHEN            reduce using rule 4 (comentario -> COMENTARIO .)


state 6

    (1) program -> lista_comentarios code_block .

    $end            reduce using rule 1 (program -> lista_comentarios code_block .)


state 7

    (5) code_block -> proc . MASTER LPARENTESIS comentario list_statement RPARENTESIS PUNTO_COMA group_proc

    MASTER          shift and go to state 12


state 8

    (6) code_block -> group_proc . proc MASTER LPARENTESIS comentario list_statement RPARENTESIS PUNTO_COMA group_proc
    (7) proc -> . PROC

    PROC            shift and go to state 14

    proc                           shift and go to state 13

state 9

    (7) proc -> PROC .
    (8) group_proc -> PROC . VARIABLE LPARENTESIS COMENTARIO list_statement RPARENTESIS PUNTO_COMA group_proc

    MASTER          reduce using rule 7 (proc -> PROC .)
    VARIABLE        shift and go to state 15


state 10

    (9) group_proc -> empty .

    PROC            reduce using rule 9 (group_proc -> empty .)
    $end            reduce using rule 9 (group_proc -> empty .)


state 11

    (2) lista_comentarios -> comentario lista_comentarios .

    PROC            reduce using rule 2 (lista_comentarios -> comentario lista_comentarios .)


state 12

    (5) code_block -> proc MASTER . LPARENTESIS comentario list_statement RPARENTESIS PUNTO_COMA group_proc

    LPARENTESIS     shift and go to state 16


state 13

    (6) code_block -> group_proc proc . MASTER LPARENTESIS comentario list_statement RPARENTESIS PUNTO_COMA group_proc

    MASTER          shift and go to state 17


state 14

    (7) proc -> PROC .

    MASTER          reduce using rule 7 (proc -> PROC .)


state 15

    (8) group_proc -> PROC VARIABLE . LPARENTESIS COMENTARIO list_statement RPARENTESIS PUNTO_COMA group_proc

    LPARENTESIS     shift and go to state 18


state 16

    (5) code_block -> proc MASTER LPARENTESIS . comentario list_statement RPARENTESIS PUNTO_COMA group_proc
    (4) comentario -> . COMENTARIO

    COMENTARIO      shift and go to state 5

    comentario                     shift and go to state 19

state 17

    (6) code_block -> group_proc proc MASTER . LPARENTESIS comentario list_statement RPARENTESIS PUNTO_COMA group_proc

    LPARENTESIS     shift and go to state 20


state 18

    (8) group_proc -> PROC VARIABLE LPARENTESIS . COMENTARIO list_statement RPARENTESIS PUNTO_COMA group_proc

    COMENTARIO      shift and go to state 21


state 19

    (5) code_block -> proc MASTER LPARENTESIS comentario . list_statement RPARENTESIS PUNTO_COMA group_proc
    (10) list_statement -> . statement list_statement
    (11) list_statement -> . comentario
    (12) list_statement -> . empty
    (13) statement -> . no_return_statement
    (14) statement -> . return_statement
    (4) comentario -> . COMENTARIO
    (84) empty -> .
    (15) no_return_statement -> . new_variable_statement
    (16) no_return_statement -> . alterb_statement
    (17) no_return_statement -> . values_statement
    (18) no_return_statement -> . repeat_statement
    (19) no_return_statement -> . until_statement
    (20) no_return_statement -> . while_statement
    (21) no_return_statement -> . case_statement
    (22) no_return_statement -> . printvalues_statement
    (23) no_return_statement -> . signal_statement
    (24) return_statement -> . return_num_statement
    (25) return_statement -> . return_bool_statement
    (31) new_variable_statement -> . NEW VARIABLE COMA LPARENTESIS datatype COMA value RPARENTESIS PUNTO_COMA
    (39) alterb_statement -> . ALTERB LPARENTESIS VARIABLE RPARENTESIS PUNTO_COMA
    (32) values_statement -> . VALUES LPARENTESIS VARIABLE COMA value RPARENTESIS PUNTO_COMA
    (42) repeat_statement -> . REPEAT LPARENTESIS list_statement break_statement RPARENTESIS PUNTO_COMA
    (44) until_statement -> . UNTIL LPARENTESIS list_statement RPARENTESIS condition_statement PUNTO_COMA
    (51) while_statement -> . WHILE condition_statement LPARENTESIS list_statement RPARENTESIS PUNTO_COMA
    (52) while_statement -> . WHILE istrue LPARENTESIS list_statement RPARENTESIS PUNTO_COMA
    (55) case_statement -> . CASE VARIABLE case_when_statements else_statement PUNTO_COMA
    (61) printvalues_statement -> . PRINTVALUES LPARENTESIS list_content_print RPARENTESIS PUNTO_COMA
    (67) signal_statement -> . SIGNAL LPARENTESIS VARIABLE COMA return_num_statement RPARENTESIS PUNTO_COMA
    (68) signal_statement -> . SIGNAL LPARENTESIS VARIABLE COMA expression RPARENTESIS PUNTO_COMA
    (26) return_num_statement -> . viewsignal_statement
    (27) return_num_statement -> . alter_statement
    (29) return_bool_statement -> . condition_statement
    (30) return_bool_statement -> . istrue_statement
    (69) viewsignal_statement -> . VIEWSIGNAL LPARENTESIS VARIABLE RPARENTESIS PUNTO_COMA
    (70) viewsignal_statement -> . VIEWSIGNAL LPARENTESIS expression RPARENTESIS PUNTO_COMA
    (71) viewsignal_statement -> . VIEWSIGNAL LPARENTESIS alter_statement RPARENTESIS PUNTO_COMA
    (33) alter_statement -> . ALTER LPARENTESIS VARIABLE COMA operador COMA num_alter_statement RPARENTESIS PUNTO_COMA
    (34) alter_statement -> . ALTER LPARENTESIS VARIABLE COMA operador COMA expression RPARENTESIS PUNTO_COMA
    (40) condition_statement -> . expression condition expression
    (41) istrue_statement -> . ISTRUE LPARENTESIS VARIABLE RPARENTESIS PUNTO_COMA
    (72) expression -> . NUMERO
    (73) expression -> . VARIABLE
    (74) expression -> . LPARENTESIS expression RPARENTESIS
    (75) expression -> . NUMERO operador NUMERO

    COMENTARIO      shift and go to state 5
    RPARENTESIS     reduce using rule 84 (empty -> .)
    NEW             shift and go to state 40
    ALTERB          shift and go to state 42
    VALUES          shift and go to state 43
    REPEAT          shift and go to state 44
    UNTIL           shift and go to state 45
    WHILE           shift and go to state 47
    CASE            shift and go to state 48
    PRINTVALUES     shift and go to state 49
    SIGNAL          shift and go to state 50
    VIEWSIGNAL      shift and go to state 55
    ALTER           shift and go to state 56
    ISTRUE          shift and go to state 57
    NUMERO          shift and go to state 58
    VARIABLE        shift and go to state 41
    LPARENTESIS     shift and go to state 22

    comentario                     shift and go to state 23
    list_statement                 shift and go to state 24
    statement                      shift and go to state 25
    empty                          shift and go to state 26
    no_return_statement            shift and go to state 27
    return_statement               shift and go to state 28
    new_variable_statement         shift and go to state 29
    alterb_statement               shift and go to state 30
    values_statement               shift and go to state 31
    repeat_statement               shift and go to state 32
    until_statement                shift and go to state 33
    while_statement                shift and go to state 34
    case_statement                 shift and go to state 35
    printvalues_statement          shift and go to state 36
    signal_statement               shift and go to state 37
    return_num_statement           shift and go to state 38
    return_bool_statement          shift and go to state 39
    condition_statement            shift and go to state 46
    expression                     shift and go to state 51
    viewsignal_statement           shift and go to state 52
    alter_statement                shift and go to state 53
    istrue_statement               shift and go to state 54

state 20

    (6) code_block -> group_proc proc MASTER LPARENTESIS . comentario list_statement RPARENTESIS PUNTO_COMA group_proc
    (4) comentario -> . COMENTARIO

    COMENTARIO      shift and go to state 5

    comentario                     shift and go to state 59

state 21

    (8) group_proc -> PROC VARIABLE LPARENTESIS COMENTARIO . list_statement RPARENTESIS PUNTO_COMA group_proc
    (10) list_statement -> . statement list_statement
    (11) list_statement -> . comentario
    (12) list_statement -> . empty
    (13) statement -> . no_return_statement
    (14) statement -> . return_statement
    (4) comentario -> . COMENTARIO
    (84) empty -> .
    (15) no_return_statement -> . new_variable_statement
    (16) no_return_statement -> . alterb_statement
    (17) no_return_statement -> . values_statement
    (18) no_return_statement -> . repeat_statement
    (19) no_return_statement -> . until_statement
    (20) no_return_statement -> . while_statement
    (21) no_return_statement -> . case_statement
    (22) no_return_statement -> . printvalues_statement
    (23) no_return_statement -> . signal_statement
    (24) return_statement -> . return_num_statement
    (25) return_statement -> . return_bool_statement
    (31) new_variable_statement -> . NEW VARIABLE COMA LPARENTESIS datatype COMA value RPARENTESIS PUNTO_COMA
    (39) alterb_statement -> . ALTERB LPARENTESIS VARIABLE RPARENTESIS PUNTO_COMA
    (32) values_statement -> . VALUES LPARENTESIS VARIABLE COMA value RPARENTESIS PUNTO_COMA
    (42) repeat_statement -> . REPEAT LPARENTESIS list_statement break_statement RPARENTESIS PUNTO_COMA
    (44) until_statement -> . UNTIL LPARENTESIS list_statement RPARENTESIS condition_statement PUNTO_COMA
    (51) while_statement -> . WHILE condition_statement LPARENTESIS list_statement RPARENTESIS PUNTO_COMA
    (52) while_statement -> . WHILE istrue LPARENTESIS list_statement RPARENTESIS PUNTO_COMA
    (55) case_statement -> . CASE VARIABLE case_when_statements else_statement PUNTO_COMA
    (61) printvalues_statement -> . PRINTVALUES LPARENTESIS list_content_print RPARENTESIS PUNTO_COMA
    (67) signal_statement -> . SIGNAL LPARENTESIS VARIABLE COMA return_num_statement RPARENTESIS PUNTO_COMA
    (68) signal_statement -> . SIGNAL LPARENTESIS VARIABLE COMA expression RPARENTESIS PUNTO_COMA
    (26) return_num_statement -> . viewsignal_statement
    (27) return_num_statement -> . alter_statement
    (29) return_bool_statement -> . condition_statement
    (30) return_bool_statement -> . istrue_statement
    (69) viewsignal_statement -> . VIEWSIGNAL LPARENTESIS VARIABLE RPARENTESIS PUNTO_COMA
    (70) viewsignal_statement -> . VIEWSIGNAL LPARENTESIS expression RPARENTESIS PUNTO_COMA
    (71) viewsignal_statement -> . VIEWSIGNAL LPARENTESIS alter_statement RPARENTESIS PUNTO_COMA
    (33) alter_statement -> . ALTER LPARENTESIS VARIABLE COMA operador COMA num_alter_statement RPARENTESIS PUNTO_COMA
    (34) alter_statement -> . ALTER LPARENTESIS VARIABLE COMA operador COMA expression RPARENTESIS PUNTO_COMA
    (40) condition_statement -> . expression condition expression
    (41) istrue_statement -> . ISTRUE LPARENTESIS VARIABLE RPARENTESIS PUNTO_COMA
    (72) expression -> . NUMERO
    (73) expression -> . VARIABLE
    (74) expression -> . LPARENTESIS expression RPARENTESIS
    (75) expression -> . NUMERO operador NUMERO

    COMENTARIO      shift and go to state 5
    RPARENTESIS     reduce using rule 84 (empty -> .)
    NEW             shift and go to state 40
    ALTERB          shift and go to state 42
    VALUES          shift and go to state 43
    REPEAT          shift and go to state 44
    UNTIL           shift and go to state 45
    WHILE           shift and go to state 47
    CASE            shift and go to state 48
    PRINTVALUES     shift and go to state 49
    SIGNAL          shift and go to state 50
    VIEWSIGNAL      shift and go to state 55
    ALTER           shift and go to state 56
    ISTRUE          shift and go to state 57
    NUMERO          shift and go to state 58
    VARIABLE        shift and go to state 41
    LPARENTESIS     shift and go to state 22

    list_statement                 shift and go to state 60
    statement                      shift and go to state 25
    comentario                     shift and go to state 23
    empty                          shift and go to state 26
    no_return_statement            shift and go to state 27
    return_statement               shift and go to state 28
    new_variable_statement         shift and go to state 29
    alterb_statement               shift and go to state 30
    values_statement               shift and go to state 31
    repeat_statement               shift and go to state 32
    until_statement                shift and go to state 33
    while_statement                shift and go to state 34
    case_statement                 shift and go to state 35
    printvalues_statement          shift and go to state 36
    signal_statement               shift and go to state 37
    return_num_statement           shift and go to state 38
    return_bool_statement          shift and go to state 39
    condition_statement            shift and go to state 46
    expression                     shift and go to state 51
    viewsignal_statement           shift and go to state 52
    alter_statement                shift and go to state 53
    istrue_statement               shift and go to state 54

state 22

    (74) expression -> LPARENTESIS . expression RPARENTESIS
    (72) expression -> . NUMERO
    (73) expression -> . VARIABLE
    (74) expression -> . LPARENTESIS expression RPARENTESIS
    (75) expression -> . NUMERO operador NUMERO

    NUMERO          shift and go to state 58
    VARIABLE        shift and go to state 41
    LPARENTESIS     shift and go to state 22

    expression                     shift and go to state 61

state 23

    (11) list_statement -> comentario .

    RPARENTESIS     reduce using rule 11 (list_statement -> comentario .)
    BREAK           reduce using rule 11 (list_statement -> comentario .)
    PUNTO_COMA      reduce using rule 11 (list_statement -> comentario .)
    WHEN            reduce using rule 11 (list_statement -> comentario .)
    COMENTARIO      reduce using rule 11 (list_statement -> comentario .)
    NEW             reduce using rule 11 (list_statement -> comentario .)
    ALTERB          reduce using rule 11 (list_statement -> comentario .)
    VALUES          reduce using rule 11 (list_statement -> comentario .)
    REPEAT          reduce using rule 11 (list_statement -> comentario .)
    UNTIL           reduce using rule 11 (list_statement -> comentario .)
    WHILE           reduce using rule 11 (list_statement -> comentario .)
    CASE            reduce using rule 11 (list_statement -> comentario .)
    PRINTVALUES     reduce using rule 11 (list_statement -> comentario .)
    SIGNAL          reduce using rule 11 (list_statement -> comentario .)
    VIEWSIGNAL      reduce using rule 11 (list_statement -> comentario .)
    ALTER           reduce using rule 11 (list_statement -> comentario .)
    ISTRUE          reduce using rule 11 (list_statement -> comentario .)
    NUMERO          reduce using rule 11 (list_statement -> comentario .)
    VARIABLE        reduce using rule 11 (list_statement -> comentario .)
    LPARENTESIS     reduce using rule 11 (list_statement -> comentario .)


state 24

    (5) code_block -> proc MASTER LPARENTESIS comentario list_statement . RPARENTESIS PUNTO_COMA group_proc

    RPARENTESIS     shift and go to state 62


state 25

    (10) list_statement -> statement . list_statement
    (10) list_statement -> . statement list_statement
    (11) list_statement -> . comentario
    (12) list_statement -> . empty
    (13) statement -> . no_return_statement
    (14) statement -> . return_statement
    (4) comentario -> . COMENTARIO
    (84) empty -> .
    (15) no_return_statement -> . new_variable_statement
    (16) no_return_statement -> . alterb_statement
    (17) no_return_statement -> . values_statement
    (18) no_return_statement -> . repeat_statement
    (19) no_return_statement -> . until_statement
    (20) no_return_statement -> . while_statement
    (21) no_return_statement -> . case_statement
    (22) no_return_statement -> . printvalues_statement
    (23) no_return_statement -> . signal_statement
    (24) return_statement -> . return_num_statement
    (25) return_statement -> . return_bool_statement
    (31) new_variable_statement -> . NEW VARIABLE COMA LPARENTESIS datatype COMA value RPARENTESIS PUNTO_COMA
    (39) alterb_statement -> . ALTERB LPARENTESIS VARIABLE RPARENTESIS PUNTO_COMA
    (32) values_statement -> . VALUES LPARENTESIS VARIABLE COMA value RPARENTESIS PUNTO_COMA
    (42) repeat_statement -> . REPEAT LPARENTESIS list_statement break_statement RPARENTESIS PUNTO_COMA
    (44) until_statement -> . UNTIL LPARENTESIS list_statement RPARENTESIS condition_statement PUNTO_COMA
    (51) while_statement -> . WHILE condition_statement LPARENTESIS list_statement RPARENTESIS PUNTO_COMA
    (52) while_statement -> . WHILE istrue LPARENTESIS list_statement RPARENTESIS PUNTO_COMA
    (55) case_statement -> . CASE VARIABLE case_when_statements else_statement PUNTO_COMA
    (61) printvalues_statement -> . PRINTVALUES LPARENTESIS list_content_print RPARENTESIS PUNTO_COMA
    (67) signal_statement -> . SIGNAL LPARENTESIS VARIABLE COMA return_num_statement RPARENTESIS PUNTO_COMA
    (68) signal_statement -> . SIGNAL LPARENTESIS VARIABLE COMA expression RPARENTESIS PUNTO_COMA
    (26) return_num_statement -> . viewsignal_statement
    (27) return_num_statement -> . alter_statement
    (29) return_bool_statement -> . condition_statement
    (30) return_bool_statement -> . istrue_statement
    (69) viewsignal_statement -> . VIEWSIGNAL LPARENTESIS VARIABLE RPARENTESIS PUNTO_COMA
    (70) viewsignal_statement -> . VIEWSIGNAL LPARENTESIS expression RPARENTESIS PUNTO_COMA
    (71) viewsignal_statement -> . VIEWSIGNAL LPARENTESIS alter_statement RPARENTESIS PUNTO_COMA
    (33) alter_statement -> . ALTER LPARENTESIS VARIABLE COMA operador COMA num_alter_statement RPARENTESIS PUNTO_COMA
    (34) alter_statement -> . ALTER LPARENTESIS VARIABLE COMA operador COMA expression RPARENTESIS PUNTO_COMA
    (40) condition_statement -> . expression condition expression
    (41) istrue_statement -> . ISTRUE LPARENTESIS VARIABLE RPARENTESIS PUNTO_COMA
    (72) expression -> . NUMERO
    (73) expression -> . VARIABLE
    (74) expression -> . LPARENTESIS expression RPARENTESIS
    (75) expression -> . NUMERO operador NUMERO

  ! shift/reduce conflict for COMENTARIO resolved as shift
  ! shift/reduce conflict for NEW resolved as shift
  ! shift/reduce conflict for ALTERB resolved as shift
  ! shift/reduce conflict for VALUES resolved as shift
  ! shift/reduce conflict for REPEAT resolved as shift
  ! shift/reduce conflict for UNTIL resolved as shift
  ! shift/reduce conflict for WHILE resolved as shift
  ! shift/reduce conflict for CASE resolved as shift
  ! shift/reduce conflict for PRINTVALUES resolved as shift
  ! shift/reduce conflict for SIGNAL resolved as shift
  ! shift/reduce conflict for VIEWSIGNAL resolved as shift
  ! shift/reduce conflict for ALTER resolved as shift
  ! shift/reduce conflict for ISTRUE resolved as shift
  ! shift/reduce conflict for NUMERO resolved as shift
  ! shift/reduce conflict for VARIABLE resolved as shift
  ! shift/reduce conflict for LPARENTESIS resolved as shift
    COMENTARIO      shift and go to state 5
    RPARENTESIS     reduce using rule 84 (empty -> .)
    BREAK           reduce using rule 84 (empty -> .)
    PUNTO_COMA      reduce using rule 84 (empty -> .)
    WHEN            reduce using rule 84 (empty -> .)
    NEW             shift and go to state 40
    ALTERB          shift and go to state 42
    VALUES          shift and go to state 43
    REPEAT          shift and go to state 44
    UNTIL           shift and go to state 45
    WHILE           shift and go to state 47
    CASE            shift and go to state 48
    PRINTVALUES     shift and go to state 49
    SIGNAL          shift and go to state 50
    VIEWSIGNAL      shift and go to state 55
    ALTER           shift and go to state 56
    ISTRUE          shift and go to state 57
    NUMERO          shift and go to state 58
    VARIABLE        shift and go to state 41
    LPARENTESIS     shift and go to state 22

  ! COMENTARIO      [ reduce using rule 84 (empty -> .) ]
  ! NEW             [ reduce using rule 84 (empty -> .) ]
  ! ALTERB          [ reduce using rule 84 (empty -> .) ]
  ! VALUES          [ reduce using rule 84 (empty -> .) ]
  ! REPEAT          [ reduce using rule 84 (empty -> .) ]
  ! UNTIL           [ reduce using rule 84 (empty -> .) ]
  ! WHILE           [ reduce using rule 84 (empty -> .) ]
  ! CASE            [ reduce using rule 84 (empty -> .) ]
  ! PRINTVALUES     [ reduce using rule 84 (empty -> .) ]
  ! SIGNAL          [ reduce using rule 84 (empty -> .) ]
  ! VIEWSIGNAL      [ reduce using rule 84 (empty -> .) ]
  ! ALTER           [ reduce using rule 84 (empty -> .) ]
  ! ISTRUE          [ reduce using rule 84 (empty -> .) ]
  ! NUMERO          [ reduce using rule 84 (empty -> .) ]
  ! VARIABLE        [ reduce using rule 84 (empty -> .) ]
  ! LPARENTESIS     [ reduce using rule 84 (empty -> .) ]

    statement                      shift and go to state 25
    list_statement                 shift and go to state 63
    comentario                     shift and go to state 23
    empty                          shift and go to state 26
    no_return_statement            shift and go to state 27
    return_statement               shift and go to state 28
    new_variable_statement         shift and go to state 29
    alterb_statement               shift and go to state 30
    values_statement               shift and go to state 31
    repeat_statement               shift and go to state 32
    until_statement                shift and go to state 33
    while_statement                shift and go to state 34
    case_statement                 shift and go to state 35
    printvalues_statement          shift and go to state 36
    signal_statement               shift and go to state 37
    return_num_statement           shift and go to state 38
    return_bool_statement          shift and go to state 39
    condition_statement            shift and go to state 46
    expression                     shift and go to state 51
    viewsignal_statement           shift and go to state 52
    alter_statement                shift and go to state 53
    istrue_statement               shift and go to state 54

state 26

    (12) list_statement -> empty .

    RPARENTESIS     reduce using rule 12 (list_statement -> empty .)
    BREAK           reduce using rule 12 (list_statement -> empty .)
    PUNTO_COMA      reduce using rule 12 (list_statement -> empty .)
    WHEN            reduce using rule 12 (list_statement -> empty .)
    COMENTARIO      reduce using rule 12 (list_statement -> empty .)
    NEW             reduce using rule 12 (list_statement -> empty .)
    ALTERB          reduce using rule 12 (list_statement -> empty .)
    VALUES          reduce using rule 12 (list_statement -> empty .)
